--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "test": "jest"
   },
   "dependencies": {
+    "@expo/vector-icons": "^6.3.1",
+    "native-base": "^2.3.10",
     "react": "16.3.0-alpha.1",
     "react-native": "0.54.2",
     "react-native-pathjs-charts": "^0.0.34",
